[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Objects/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Objects/StaffAltar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Objects/Lever.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Milo/Milo.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Objects/Block.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Levels/Level1.gd" type="Script" id=6]
[ext_resource path="res://Art/Misc/gate.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Objects/SavingPoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Main Levels/Level1Background.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 211.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 195.75, 359.75 )

[node name="Level1" type="Node"]

[node name="Level1Manager" type="Node" parent="." groups=["LevelManager"]]
script = ExtResource( 6 )

[node name="Level1Background" parent="." instance=ExtResource( 9 )]

[node name="Milo" parent="." instance=ExtResource( 4 )]
position = Vector2( 2406, -757 )

[node name="Platforms" type="Node" parent="."]

[node name="Platform5" parent="Platforms" instance=ExtResource( 1 )]
position = Vector2( 3600, -116 )

[node name="Platform6" parent="Platforms" groups=["UnlitOnly"] instance=ExtResource( 1 )]
position = Vector2( 4800, -416 )
showInLight = false

[node name="Litplatformmiddle" parent="Platforms/Platform6" index="1"]
visible = false

[node name="Platform7" parent="Platforms" instance=ExtResource( 1 )]
position = Vector2( 6478, -196 )

[node name="Platform9" parent="Platforms" instance=ExtResource( 1 )]
position = Vector2( 10057, -592 )

[node name="Platform10" parent="Platforms" instance=ExtResource( 1 )]
position = Vector2( 10767, -592 )

[node name="PuzzlePlatform1" parent="Platforms" groups=["Platform"] instance=ExtResource( 1 )]
position = Vector2( 15650, -1377 )

[node name="PuzzlePlatform2" parent="Platforms" groups=["Platform"] instance=ExtResource( 1 )]
position = Vector2( 17000, -269 )

[node name="PuzzlePlatform3" parent="Platforms" groups=["Platform"] instance=ExtResource( 1 )]
position = Vector2( 18350, -840 )

[node name="Platform13" parent="Platforms" instance=ExtResource( 1 )]
visible = false
position = Vector2( -412, -1111 )
rotation = 1.5708
scale = Vector2( 5, 1 )

[node name="Lever1" parent="." instance=ExtResource( 3 )]
position = Vector2( 13490, 176 )

[node name="Lever2" parent="." instance=ExtResource( 3 )]
position = Vector2( 13913, 176 )

[node name="Lever3" parent="." instance=ExtResource( 3 )]
position = Vector2( 14336, 173 )

[node name="MovingAltar" parent="." instance=ExtResource( 2 )]
position = Vector2( 2841, 457 )

[node name="MovingBlock" parent="." instance=ExtResource( 5 )]
position = Vector2( 8759, 47 )
scale = Vector2( 3, 3 )

[node name="Area2D" parent="MovingBlock" index="1"]
blockGravity = 0.0

[node name="MovingPlatform" parent="." instance=ExtResource( 1 )]
position = Vector2( 2841, 530 )

[node name="Lever4" parent="." instance=ExtResource( 3 )]
position = Vector2( 10255, -674 )

[node name="Lever5" parent="." instance=ExtResource( 3 )]
position = Vector2( 10918, -684 )

[node name="Lever6" parent="." instance=ExtResource( 3 )]
position = Vector2( 259, 299 )

[node name="DrawBridge" type="KinematicBody2D" parent="."]
light_mask = 3
position = Vector2( 898, 316 )
scale = Vector2( 1, 3 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="DoorSprite" type="Sprite" parent="DrawBridge"]
position = Vector2( 0, -180 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawBridge"]
position = Vector2( 36, -178 )
shape = SubResource( 1 )

[node name="Lever7" parent="." instance=ExtResource( 3 )]
position = Vector2( 6254, -280 )

[node name="SavingPoint" parent="." instance=ExtResource( 8 )]
position = Vector2( 653, 326 )
scale = Vector2( 5, 1.5 )

[node name="SavingPoint2" parent="." instance=ExtResource( 8 )]
position = Vector2( 6636, -269 )
scale = Vector2( 5, 1.5 )

[node name="SavingPoint3" parent="." instance=ExtResource( 8 )]
position = Vector2( 2117, 327 )
scale = Vector2( 8, 1.5 )

[node name="SavingPoint4" parent="." instance=ExtResource( 8 )]
position = Vector2( 9912, -664 )
scale = Vector2( 5, 1.5 )

[node name="SavingPoint5" parent="." instance=ExtResource( 8 )]
position = Vector2( 13215, 83 )
scale = Vector2( 2, 9 )

[node name="EndLevel1" type="Area2D" parent="."]
position = Vector2( 21117, -1907 )
scale = Vector2( 1, 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLevel1"]
light_mask = 0
shape = SubResource( 2 )

[connection signal="body_entered" from="EndLevel1" to="Level1Manager" method="_on_EndLevel1_body_entered"]

[editable path="Platforms/Platform6"]
[editable path="MovingBlock"]
